fix(actions): avoid argument-list-too-long by using file-based commit payloads
Write categorized commits to a temp JSON file in get-commit-range and expose commits-file output.

Update check-release-commit and generate-comprehensive-changelog to prefer COMMITS_FILE/commits-file with backward-compatible env fallbacks.

Switch create-release and create-release-pr job actions to pass commits-file instead of inline commits JSON to prevent oversized env/argument payloads in shell steps.

--- a/.github/actions/git/steps/check-release-commit/action.yml
+++ b/.github/actions/git/steps/check-release-commit/action.yml
@@ -25,6 +25,9 @@ outputs:
   commits:
     description: "JSON array of categorized commits"
     value: ${{ steps.commit-range.outputs.commits }}
+  commits-file:
+    description: "Path to JSON file containing the commits array (preferred over commits to avoid env-var size limits)"
+    value: ${{ steps.commit-range.outputs.commits-file }}
 
 runs:
   using: "composite"
@@ -42,7 +45,8 @@ runs:
       id: check
       shell: bash
       env:
-        COMMITS: ${{ steps.commit-range.outputs.commits }}
+        # Pass the file path rather than the full JSON to avoid "Argument list too long" errors
+        COMMITS_FILE: ${{ steps.commit-range.outputs.commits-file }}
         HAS_COMMITS: ${{ steps.commit-range.outputs.has-commits }}
       run: |
         # Run the Node.js script
